<resources>
    <string name="app_name">UniPump</string>
    <string name="email_telefone">Email ou Telefone</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entar</string>
    <string name="voltar">Voltar</string>
    <string name="app_name_descrição">Logo UniPump</string>
    <string name="passo1">Passo 1 de 4</string>
    <string name="passo2">Passo 2 de 4</string>
    <string name="passo3">Passo 3 de 4</string>
    <string name="passo4">Passo 4 de 4</string>
    <string name="titulo_passo_1">Digite seu e-mail ou número de telefone para a recuperação.</string>
    <string name="titulo_passo_2">Antes de enviarmos o código, seu email@gmail.com é o E-mail correto?</string>
    <string name="titulo_passo_3">Insira no campo abaixo o código de verificação de 5 digitos enviado para o seu email. </string>
    <string name="titulo_passo_4">Digite sua nova senha e </string>
    <string name="redfinir_senha">Redefina sua senha</string>
    <string name="enviamos_codigo">Acabamos de enviar o codigo para seu email</string>
    <string name="enviar">Enviar</string>
    <string name="confirmar">Confirmar</string>
    <string name="editar">Editar</string>
    <string name="validar">Validar</string>
    <string name="reenviar_codigo">Reenviar Condigo</string>
    <string name="criar_nova_senha">Criar uma nova senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="informar_peso">Informar peso</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="mais_detalhes">Mais detalhes</string>
    <string name="dados_do_aluno">Dados do Aluno</string>
    <string name="sobre_o_aluno">Sobre o Aluno</string>
    <string name="perfil_usuario">Perfil Usuario</string>
    <string name="seta_voltar">Seta Voltar</string>
    <string name="informar_altura">Informar Altura</string>
    <string name="modificar">Modificar</string>
    <string name="sobre">Sobre</string>
    <string name="lorem_ipsum_dolor_sit_amet_ut_tempora_debitis_et_nisi_dolorem_sed_praesentium_quasi_qui_minus_dolorum_et_assumenda_quia_sit_voluptatem_inventore_ut_corporis_obcaecati_est_fuga_quam_qui_nihil_eligendi_et_autem_explicabo_n_nlorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet. Ut tempora debitis et nisi dolorem sed praesentium quasi. Qui minus dolorum et assumenda quia sit voluptatem inventore ut corporis obcaecati est fuga quam qui nihil eligendi et autem explicabo.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string-array name="languages">
        <item>Português</item>
        <item>Inglês</item>
    </string-array>

</resources>