<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".TelaEsqueceuSenha">


    <LinearLayout
        android:id="@+id/containerLogin"
        style="@style/LinearLayout_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            style="@style/ImageView_logo"
            android:contentDescription="@string/app_name_descrição"
            />

        <TextView
            style="@style/TextView_logo"
            android:text="@string/app_name"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/text_redefinir_senha"
        style="@style/TextViewRedefinirSenha_esqueceuSenha"
        android:text="@string/redfinir_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerLogin"
        />


    <LinearLayout
        android:id="@+id/container_esqueceu_senha"
        style="@style/LinearLayout_esqueceuSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_redefinir_senha"
        >

        <!-- Título -->
        <TextView
            style="@style/TextViewTitle_esqueceuSenha"
            android:text="@string/passo1"

            />

        <TextView
            style="@style/TextViewInstruction_esqueceuSenha"
            android:text="@string/titulo_passo_1"
             />

        <!-- Campo email -->
        <EditText
            android:id="@+id/edtEmailOuTelefone_recuperar_senha_1"
            android:hint="@string/email_telefone"
            style="@style/EditText"
            tools:ignore="TextFields"
            android:drawableRight="@drawable/ic_email"
            />


        <!-- Botão entrar -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnviar"
            android:text="@string/enviar"
            style="@style/Button"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>