<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaEsqueceuSenha4"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/containerLogin4"
        style="@style/LinearLayout_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            style="@style/ImageView_logo"
            android:contentDescription="@string/app_name_descrição"
            />

        <TextView
            style="@style/TextView_logo"
            android:text="@string/app_name"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/text_redefinir_senha"
        style="@style/TextViewRedefinirSenha_esqueceuSenha"
        android:text="@string/criar_nova_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerLogin4"
        />


    <LinearLayout
        android:id="@+id/container_redefinir_senha"
        style="@style/LinearLayout_esqueceuSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_redefinir_senha"
        >

        <!-- Título -->
        <TextView
            style="@style/TextViewTitle_esqueceuSenha"
            android:text="@string/passo4"
            />

        <TextView
            android:layout_gravity="start"
            style="@style/TextViewInstruction_esqueceuSenha"
            android:text="@string/nova_senha"
            />

        <!-- Campo email -->
        <EditText
            android:id="@+id/edtNova_senha"
            android:hint="@string/senha"
            style="@style/EditText"
            tools:ignore="TextFields"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_eye"
            />

        <TextView
            android:layout_gravity="start"
            style="@style/TextViewInstruction_esqueceuSenha"
            android:text="@string/confirmar_senha"

            />


        <!-- Campo email -->
        <EditText
            android:id="@+id/edConfirmarSenha4"
            android:hint="@string/senha"
            style="@style/EditText"
            tools:ignore="TextFields"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_eye"
            />



        <!-- Botão entrar -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmar4"
            android:text="@string/confirmar"
            style="@style/Button"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>