<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaEsqueceuSenha2"
    android:background="@color/azul"
    >

    <LinearLayout
        android:id="@+id/containerLogin2"
        style="@style/LinearLayout_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            style="@style/ImageView_logo"
            android:contentDescription="@string/app_name_descrição"
            />

        <TextView
            style="@style/TextView_logo"
            android:text="@string/app_name"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_redefinir_senha2"
        style="@style/TextViewRedefinirSenha_esqueceuSenha"
        android:text="@string/redfinir_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerLogin2"
        />

    <LinearLayout
        android:id="@+id/container_esqueceu_senha2"
        style="@style/LinearLayout_esqueceuSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_redefinir_senha2"
        >

        <!-- Título -->
        <TextView
            style="@style/TextViewTitle_esqueceuSenha"
            android:text="@string/passo2"
            />

        <TextView
            android:id="@+id/textViewInstruction"
            style="@style/TextViewInstruction_esqueceuSenha"
            android:text="@string/titulo_passo_2"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >

            <!-- Botão Editar -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditar"
                android:text="@string/editar"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:backgroundTint="#849b95"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Botão Confirmar -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmar"
                android:text="@string/confirmar"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>