<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaEsqueceuSenha3"
    android:background="@color/blue"
    >

    <LinearLayout
        android:id="@+id/containerLogin"
        style="@style/LinearLayout_logo"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            style="@style/ImageView_logo"
            android:contentDescription="@string/app_name_descrição"
            />

        <TextView
            style="@style/TextView_logo"
            android:text="@string/app_name"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/text_redefinir_senha"
        style="@style/TextViewTitle_esqueceuSenha"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_height="wrap_content"

        android:text="@string/enviamos_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerLogin"
        />


    <LinearLayout
        android:id="@+id/container_esqueceu_senha"
        style="@style/LinearLayout_esqueceuSenha"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_redefinir_senha"
        >

        <!-- Título -->
        <TextView
            style="@style/TextViewTitle_esqueceuSenha"
            android:text="@string/passo3"

            />

        <TextView
            android:id="@+id/textViewInstruction3"
            style="@style/TextViewInstruction_esqueceuSenha"
            android:text="@string/titulo_passo_3"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >


            <EditText
                android:id="@+id/edit_text1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="0"
                android:padding="15dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp"
                android:layout_marginStart="5dp"
                android:maxLength="1"
                android:background="@drawable/edit_text_menor"
                android:layout_marginEnd="15dp"
                />

            <EditText
                android:id="@+id/edit_text2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="0"
                android:padding="15dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp"
                android:maxLength="1"
                android:background="@drawable/edit_text_menor"
                android:layout_marginEnd="15dp"
                />

            <EditText
                android:id="@+id/edit_text3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="0"
                android:padding="15dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp"
                android:maxLength="1"
                android:background="@drawable/edit_text_menor"
                android:layout_marginEnd="15dp"
                />

            <EditText
                android:id="@+id/edit_text4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="0"
                android:padding="15dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp"
                android:maxLength="1"
                android:background="@drawable/edit_text_menor"
                android:layout_marginEnd="15dp"
                />

            <EditText
                android:id="@+id/edit_text5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="0"
                android:padding="15dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp"
                android:maxLength="1"
                android:background="@drawable/edit_text_menor"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/tvReenviarCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reenviar_codigo"
            android:textSize="15sp"
            android:textColor="#0000FF"
            android:layout_marginTop="18dp"
            android:layout_gravity="start"
            />



        <!-- Botão entrar -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnValidar"
            android:text="@string/validar"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            style="@style/Button"
            />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>