<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul"
        android:padding="24dp">

        <!-- Botão de voltar -->
        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:backgroundTint="#2A2A2A"
            android:textColor="#FFFFFF"
            android:padding="8dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" />

        <!-- Logo + texto acima da caixa branca -->
        <LinearLayout
            android:id="@+id/headerLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="64dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_unipump_nobk"
                android:contentDescription="@string/app_name_descrição"
                app:tint="#FFFFFF"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UniPump"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="8dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <!-- Caixa branca central com campos -->
        <LinearLayout
            android:id="@+id/containerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/container_components"
            android:elevation="4dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:clipToPadding="false"
            android:layout_below="@id/headerLogo"
            android:layout_centerHorizontal="true">

            <!-- Título -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bem vindo(a)."
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginTop="8dp"
                android:layout_gravity="center" />

            <!-- Campo email -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_telefone"
                android:drawableRight="@drawable/ic_email"
                android:backgroundTint="#B0C4DE"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:maxLength="25"
                android:inputType="text"
                />

            <!-- Campo senha -->
            <EditText
                android:id="@+id/etSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:drawableRight="@drawable/ic_eye"
                android:inputType="textPassword"
                android:backgroundTint="#B0C4DE"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_edittext"
                android:maxLength="25"
                />

            <!-- Esqueceu senha -->
            <TextView
                android:id="@+id/tvEsqueceuSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Esqueceu sua senha?"
                android:textSize="12sp"
                android:textColor="#0000FF"
                android:layout_marginTop="8dp"
                android:layout_gravity="start"
                />


            <!-- Botão entrar -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#004AF7"
                android:text="Entrar"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
